--- a/src/main/resources/templates/addInterns.html
+++ b/src/main/resources/templates/addInterns.html
@@ -53,7 +53,7 @@
             <div class="form-group row ">
                 <label class="col-sm-4 col-form-label">Enabled</label>
                 <div class="col-sm-2">
-                    <input class="form-control" type="checkbox" th:field="*{enabled}" name="enabled"  required>
+                    <input class="form-control" type="checkbox" th:field="*{enabled}" name="enabled" >
                 </div>
             </div>
 
